# dimpact

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Design.md  README.md  README_ja.md
.github/: dependabot.yml
bench-fixtures/: go-heavy.diff  guardrail-thresholds.md  java-heavy.diff  js-heavy.diff  local-bench-repro.md  python-heavy.diff  ruby-heavy.diff  ts-heavy.diff
docker/: Dockerfile  ci.Dockerfile
docs/: auto-policy-design.md  bench-python-ci-reachability-v0.4.1.md  bench-python-install-failure-patterns-v0.4.1.json  bench-python-install-failure-patterns-v0.4.1.md  c1-1-json-compat-inventory-and-restore-policy.md  c1-10-final-verification.md  c1-9-json-compat-restore-rollup.md  g1-1-impact-output-inventory.md  g1-12-rollup-summary.md  g1-2-gitnexus-summary-priority.md  g1-3-by-depth-schema.md  g1-7-affected-processes-approach.md  g1-8-affected-processes-defer.md  g1-9-affected-modules-approach.md  g10-1-g9-admission-pruning-stop-inventory-and-evidence-budget-memo.md  g10-10-rollup-summary.md  g10-2-evidence-family-admission-suppression-budget-schema.json  g10-2-evidence-family-admission-suppression-budget-schema.md  g11-1-pdg-scope-bridge-expansion-memo.md  g11-10-rollup-summary.md  g11-2-pdg-failure-eval-set.json  g11-2-pdg-failure-eval-set.md  g11-3-pdg-bounded-scope-expansion-policy.json  g11-3-pdg-bounded-scope-expansion-policy.md  g12-1-bounded-continuation-multi-input-alias-stitching-memo.md  g12-10-rollup-summary.md  g12-2-bounded-continuation-failure-eval-set.json  g12-2-bounded-continuation-failure-eval-set.md  g12-3-bounded-continuation-stitching-policy.json  g12-3-bounded-continuation-stitching-policy.md  g13-1-stitched-continuation-ranking-memo.md  g13-10-rollup-summary.md  g13-2-stitched-chain-ranking-budget-schema.json  g13-2-stitched-chain-ranking-budget-schema.md  g14-1-stitched-chain-runtime-representative-memo.md  g14-10-rollup-summary.md  g2-1-summary-eval-candidates.md  g2-10-rollup-summary.md  g2-2-risk-calibration-baseline.md  g2-3-summary-eval-set.json  (+57 more)
release-notes/: 0.2.0-final-check.md  0.2.0-outline.md  0.4.0-outline.md  0.4.1-outline.md  0.5.1-branch-protection-required-checks-r54-2.json  0.5.1-branch-protection-required-checks-r54-2.md  0.5.1-confidence-distribution-r52-1.json  0.5.1-confidence-distribution-r52-1.md  0.5.1-dependency-merge-strategy-r51-3.md  0.5.1-dependency-risk-validation-r51-2.md  0.5.1-min-confidence-defaults-r52-2.json  0.5.1-min-confidence-defaults-r52-2.md  0.5.1-miss-pattern-fixtures-r53-2.md  0.5.1-precision-gate-stability-r54-1.json  0.5.1-precision-gate-stability-r54-1.md  0.5.1-quality-check-r52-4.json  0.5.1-quality-check-r52-4.md  0.5.1-release-r55-6.md  (+71 more)
(+190 files in other folders)
