[package]
name = "dimpact"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
is-terminal = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
walkdir = "2.5"
tree-sitter = { version = "0.22", optional = true }
tree-sitter-rust = { version = "0.21", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
serial_test = "3.0"

[features]
default = ["ts"]
ts = ["dep:tree-sitter", "dep:tree-sitter-rust"]
