[package]
name = "dimpact"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
is-terminal = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
walkdir = "2.5"
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
log = "0.4.27"
env_logger = "0.11.8"
rusqlite = { version = "0.31", features = ["bundled"] }
blake3 = "1.5"

[dev-dependencies]
pretty_assertions = "1.4"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
serial_test = "3.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
