[package]
name = "dimpact"
version = "0.1.0"
authors = ["n01e0 <reoshiseki@gmail.com>"]
edition = "2024"
description = "impact analysis from diff"
license = "MIT"
readme = "README.md"

[workspace]
members = [ "." ]
resolver = "2"

[workspace.dependencies]
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5.48"
is-terminal = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
anyhow = "1.0.100"
regex = "1.11"
walkdir = "2.5"
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
log = "0.4.28"
env_logger = "0.11.8"
rusqlite = { version = "0.37", features = ["bundled"] }
blake3 = "1.8"
rayon = "1.11"

[dev-dependencies]
pretty_assertions = "1.4"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.23"
serial_test = "3.2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
